tests/neg/19680b.scala
//> using options -explain
def Test = List(1,2)("hello") // error: found String, required Int
